org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/ClassDefinition/ClassDefinition_no_multiple_inheritance_with_different_bindings/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project ClassDefinition_no_multiple_inheritance_with_different_bindings {
	import "${project.baseUri}/001_ClassDefinitionTest02.kmt"
}
